--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,9 @@
 [flake8]
 max-line-length=120
 
+[run]
+omit = tests/*
+
 [tox]
 skipsdist = True
 envlist = lint,unit
@@ -11,10 +14,20 @@ setenv =
 
 [testenv:unit]
 deps =
-    -rrequirements.txt
-    pytest
-    pytest-cov
-commands = pytest --cov --cov-append --cov-report=term-missing --tb native -s {posargs} {toxinidir}/tests/unit
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/tests/unit/requirements.txt
+commands = pytest \
+          --cov \
+	      --cov-report=term-missing \
+	      --cov-report=annotate:{toxinidir}/report/unit/coverage-annotated \
+	      --cov-report=html:{toxinidir}/report/unit/coverage-html \
+	      --cov-report=xml:{toxinidir}/report/unit/coverage-xml \
+          --cov-config={toxinidir}/tox.ini \
+	      --html={toxinidir}/report/unit/tests/index.html \
+	      --junitxml={toxinidir}/report/unit/junit.xml\
+	      --tb native \
+          -s {posargs} \
+          {toxinidir}/tests/unit
 
 [testenv:lint]
 deps =
