Unit Testing shrinkwrap, black to 120 characters

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,11 @@ commands = pytest \
           -s {posargs} \
           {toxinidir}/tests/unit
 
+[testenv:blacken]
+deps = black
+commands = black --line-length 120 {toxinidir}/shrinkwrap.py {toxinidir}/tests
+
+
 [testenv:lint]
 deps =
     black
