ensure black accepts line-length=120

--- a/tox.ini
+++ b/tox.ini
@@ -40,4 +40,4 @@ deps =
     flake8
 commands =
     flake8 {toxinidir}/shrinkwrap.py {toxinidir}/tests
-    black --check {toxinidir}/shrinkwrap.py {toxinidir}/tests
+    black --line-length 120 --check {toxinidir}/shrinkwrap.py {toxinidir}/tests
