Address issue where a charm wouldn't download its resources if a hyphen appeared in its name without a charm revision number

--- a/tests/unit/test_overlay.yaml
+++ b/tests/unit/test_overlay.yaml
@@ -1,5 +1,7 @@
 description: Charmed Kubernetes overlay for unit testing.
 applications:
+  openstack-integrator:
+    charm: cs:~containers/openstack-integrator
   calico:
     charm: cs:~containers/calico
   flannel:
