handle deprecated situations where a bundle lists the application as services

--- a/tests/unit/test_bundle.yaml
+++ b/tests/unit/test_bundle.yaml
@@ -5,7 +5,7 @@ machines:
     series: focal
   '1':
     series: focal
-applications:
+services:
   containerd:
     charm: cs:~containers/containerd-160
     resources: {}
