--- a/tests/unit/test_bundle.yaml
+++ b/tests/unit/test_bundle.yaml
@@ -34,8 +34,9 @@ applications:
       flannel-amd64: 844
       flannel-arm64: 841
       flannel-s390x: 828
-  kubernetes-master:
-    charm: cs:~containers/kubernetes-master-1051
+  kubernetes-control-plane:
+    charm: kubernetes-control-plane
+    channel: latest/edge
     expose: true
     num_units: 1
     options:
@@ -67,11 +68,11 @@ applications:
     to:
     - '1'
 relations:
-- - kubernetes-master:kube-control
+- - kubernetes-control-plane:kube-control
   - kubernetes-worker:kube-control
-- - kubernetes-master:certificates
+- - kubernetes-control-plane:certificates
   - easyrsa:client
-- - kubernetes-master:etcd
+- - kubernetes-control-plane:etcd
   - etcd:db
 - - kubernetes-worker:certificates
   - easyrsa:client
@@ -80,10 +81,10 @@ relations:
 - - flannel:etcd
   - etcd:db
 - - flannel:cni
-  - kubernetes-master:cni
+  - kubernetes-control-plane:cni
 - - flannel:cni
   - kubernetes-worker:cni
 - - containerd:containerd
   - kubernetes-worker:container-runtime
 - - containerd:containerd
-  - kubernetes-master:container-runtime
+  - kubernetes-control-plane:container-runtime
