Address issues where the charmhub provided bundle doesn't specifically list charm resources, ensure the charms are loaded in offline mode with the charm default resources

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ commands = pytest \
           -s {posargs} \
           {toxinidir}/tests/unit
 
-[testenv:blacken]
+[testenv:format]
 deps = black
 commands = black --line-length 120 {toxinidir}/shrinkwrap.py {toxinidir}/tests
 
